[package]
name = "gemcli"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0.100"
colored = "3.0.0"
atty = "0.2.14"
